After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 731899 - rawparser doesn't forward custom query
rawparser doesn't forward custom query
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Mac OS
: Normal normal
: 1.3.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-06-19 08:16 UTC by Justin Kim
Modified: 2014-06-22 12:13 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix target pad for default query (845 bytes, patch)
2014-06-19 08:21 UTC, Justin Kim
none Details | Review
fixed default_query target pad (846 bytes, patch)
2014-06-19 08:26 UTC, Justin Kim
committed Details | Review

Description Justin Kim 2014-06-19 08:16:45 UTC
When requesting custom query behind rawparse, it returns fail.
Comment 1 Justin Kim 2014-06-19 08:21:14 UTC
Created attachment 278737 [details] [review]
fix target pad for default query
Comment 2 Justin Kim 2014-06-19 08:26:18 UTC
Created attachment 278738 [details] [review]
fixed default_query target pad
Comment 3 Sebastian Dröge (slomo) 2014-06-22 12:13:46 UTC
commit a4a3fa206fd9115cc33b7b0eb7ada04c3244d2d0
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Sun Jun 22 14:12:43 2014 +0200

    rawparse: Use the pad passed to us directly for default event handling

commit 468a57d2e405916342d8503d2d46fbd3a3c28c8c
Author: Justin Joy <justin.joy.9to5@gmail.com>
Date:   Thu Jun 19 17:24:26 2014 +0900

    rawparse: default query should be forward on target pad
    
    https://bugzilla.gnome.org/show_bug.cgi?id=731899