rawparse: default query should be forward on target pad

https://bugzilla.gnome.org/show_bug.cgi?id=731899